# fifth-d-classify-me

./: .gitignore  README.md  evaluate.py  pyproject.toml  requirements.txt
fifth_d_classify_me/: __init__.py  classifier.py  classifier_prompts.py  classifier_redis_cache.py  classifier_server.py  server.py
tests/: __init__.py  test_classifier.py
